--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li onclick="playSong(0)"> Honey Kisses </li>
         <li onclick="playSong(1)"> Music free </li>
         <li onclick="playSong(2)"> MONTAGEM DIREÇÃO </li>
+        <li onclick="playSong(3)"> MONTAGEM COMA</li>
     </ul>
 
     <div class = "player">
