--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li onclick="playSong(1)"> Music free </li>
         <li onclick="playSong(2)"> MONTAGEM DIREÇÃO </li>
         <li onclick="playSong(3)"> MONTAGEM COMA</li>
+        <li onclick="playSong(4)"> MONTAGEM TOMADA</li>
     </ul>
 
     <div class = "player">
