--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <span id="duration">0:00</span>
         </div>
         <button onclick="prevSong()">⏮</button>
-        <button onclick="togglePlay()">▶️/⏸</button>
+        <button id="playBtn" onclick="togglePlay()">▶️</button>
         <button onclick="nextSong()">⏭</button>
         <div class="volume-control">
     🔊
