--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
   <div class="right">
     <a href="#">Premium</a>
-    <a href="#">Support</a>
-    <a href="#">Download</a>
+    <a href="#">Soporte</a>
+    <a href="#">Descargar</a>
     <span class="divider">|</span>
-    <a href="#">Install App</a>
+    <a href="#">Instala app</a>
     <button class="login-btn">Log in</button>
   </div>
 </header>
