--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="search">
       <i class="fa-solid fa-magnifying-glass"></i>
-      <input type="text" placeholder="What do you want to play?" />
+      <input type="text" placeholder="Que canción buscas?" />
     </div>
   </div>
 
@@ -26,12 +26,12 @@
     <a href="#">Soporte</a>
     <a href="#">Descargar</a>
     <span class="divider">|</span>
-    <a href="#">Instala app</a>
+    <a href="#">Instalar app</a>
     <button class="login-btn">Log in</button>
   </div>
 </header>
 <div class="container">
-    <h1>Mi página de Música</h1>
+    <h1>Spotify Clone</h1>
   
     <ul class="playlist">
         <li data-index="0">Honey Kisses</li>
