--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <li data-index="2">MONTAGEM DIREÇÃO </li>
         <li data-index="3">MONTAGEM COMA </li>
         <li data-index="4">MONTAGEM TOMADA </li>
+        <li data-index="5">On the flip </li>
     </ul>
 
     <div class = "player">
