--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <li data-index="3">MONTAGEM COMA </li>
         <li data-index="4">MONTAGEM TOMADA </li>
         <li data-index="5">On the flip </li>
+        <li data-index="6">By myself </li>
     </ul>
 
     <div class = "player">
