--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Mi Música</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mi Música</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
 <header class="topbar">
   <div class="left">
     <i class="fa-brands fa-spotify spotify-logo"></i>
 
-    <div class="search">
+    <form class="search">
       <i class="fa-solid fa-magnifying-glass"></i>
-      <input type="text" placeholder="Que canción buscas?" />
-    </div>
+      <input type="text" placeholder="Qué canción buscas?" />
+    </form>
   </div>
 
   <div class="right">
@@ -30,47 +33,43 @@
     <button class="login-btn">Log in</button>
   </div>
 </header>
+
 <div class="container">
-    <h1>Spotify Clone</h1>
-  
-    <ul class="playlist">
-        <li data-index="0">MONTAGEM DIREÇÃO </li>
-        <li data-index="1">MONTAGEM COMA </li>
-        <li data-index="2">MONTAGEM TOMADA </li>
-        <li data-index="3">On the flip </li>
-        <li data-index="4">By myself </li>
-    </ul>
+  <ul class="playlist">
+    <li data-index="0">MONTAGEM DIREÇÃO</li>
+    <li data-index="1">MONTAGEM COMA</li>
+    <li data-index="2">MONTAGEM TOMADA</li>
+    <li data-index="3">On the flip</li>
+    <li data-index="4">By myself</li>
+  </ul>
 
-    <div class = "player">
-        <img id="cover" class="cover" src="https://via.placeholder.com/200x200?text=No+Cover" alt="Portada">
-        <p id="nowPlaying">Nada sonando</p>
-                <div class="progress-container" onclick="setProgress(event)">
-            <div id="progress"></div>
-        </div>
+  <div class="player">
+    <img id="cover" class="cover" src="https://via.placeholder.com/200x200?text=No+Cover" alt="Portada">
+    <p id="nowPlaying">Nada sonando</p>
 
-        <div class="time">
-            <span id="currentTime">0:00</span>
-            <span id="duration">0:00</span>
-        </div>
-        <button onclick="prevSong()">⏮</button>
-        <button id="playBtn" aria-label="Play / Pause" onclick="togglePlay()">▶️</button>
-        <button onclick="nextSong()">⏭</button>
-        <div class="volume-control">
-    🔊
-        <input 
-        type="range" 
-        id="volume"
-        min="0"
-        max="1"
-        step="0.01"
-        value="0.5"
-        onchange="changeVolume(this.value)">
-        </div>
-        <audio id="audio"></audio>
+    <div class="progress-container" onclick="setProgress(event)">
+      <div id="progress"></div>
     </div>
+
+    <div class="time">
+      <span id="currentTime">0:00</span>
+      <span id="duration">0:00</span>
+    </div>
+
+    <button onclick="prevSong()" aria-label="Anterior">⏮</button>
+    <button id="playBtn" onclick="togglePlay()" aria-label="Play / Pause">▶️</button>
+    <button onclick="nextSong()" aria-label="Siguiente">⏭</button>
+
+    <div class="volume-control">
+      🔊
+      <input type="range" min="0" max="1" step="0.01" value="0.5"
+             onchange="changeVolume(this.value)">
+    </div>
+
+    <audio id="audio"></audio>
+  </div>
 </div>
+
 <script src="script.js"></script>
 </body>
 </html>
-
-
