--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <div class="left">
     <i class="fa-brands fa-spotify spotify-logo"></i>
 
-    <form class="search">
+    <div class="search">
       <i class="fa-solid fa-magnifying-glass"></i>
       <input type="text" placeholder="Qué canción buscas?" />
-    </form>
+    </div>
   </div>
 
   <div class="right">
@@ -35,16 +35,15 @@
 </header>
 
 <div class="container">
-  <ul class="playlist">
-    <li data-index="0">MONTAGEM DIREÇÃO</li>
-    <li data-index="1">MONTAGEM COMA</li>
-    <li data-index="2">MONTAGEM TOMADA</li>
-    <li data-index="3">On the flip</li>
-    <li data-index="4">By myself</li>
-  </ul>
+
+  <!-- 🎵 PLAYLIST AUTOMÁTICA -->
+  <ul class="playlist" id="playlist"></ul>
 
   <div class="player">
-    <img id="cover" class="cover" src="https://via.placeholder.com/200x200?text=No+Cover" alt="Portada">
+    <img id="cover" class="cover"
+         src="https://via.placeholder.com/200x200?text=No+Cover"
+         alt="Portada">
+
     <p id="nowPlaying">Nada sonando</p>
 
     <div class="progress-container" onclick="setProgress(event)">
@@ -56,18 +55,23 @@
       <span id="duration">0:00</span>
     </div>
 
-    <button onclick="prevSong()" aria-label="Anterior">⏮</button>
-    <button id="playBtn" onclick="togglePlay()" aria-label="Play / Pause">▶️</button>
-    <button onclick="nextSong()" aria-label="Siguiente">⏭</button>
+    <button onclick="prevSong()">⏮</button>
+    <button id="playBtn" onclick="togglePlay()">▶️</button>
+    <button onclick="nextSong()">⏭</button>
 
     <div class="volume-control">
       🔊
-      <input type="range" min="0" max="1" step="0.01" value="0.5"
+      <input type="range"
+             min="0"
+             max="1"
+             step="0.01"
+             value="0.5"
              onchange="changeVolume(this.value)">
     </div>
 
     <audio id="audio"></audio>
   </div>
+
 </div>
 
 <script src="script.js"></script>
